--- a/style.css
+++ b/style.css
@@ -1,12 +1,40 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 20px;
-    text-align: center;
+    top: 0;
+    left: 0;
+    margin: 0;
+    padding: 0;
+    /* text-align: center; */
+    background-color: #f2f2f2;
   }
   
-  .container {
-    max-width: 800px;
+  .all-container {
+    display: flex;
+
+    top: 0;
+  }
+
+  .sidebar {
+    background-color: #0056b3;
+    color: white;
+    width: 35%;
+    padding: 20px;
+    position: fixed;
+    height: 100vh;
     margin: auto;
+  }
+
+  .title{
+    margin-top: 100px;
+
+  }
+
+  .container {
+    margin-left: 35%;
+    background-color: #f2f2f2;
+    text-align: center;
+    width: 65%;   
+    height: 100vh;
     padding: 20px;
     border-radius: 8px;
   }
@@ -34,6 +62,40 @@ body {
     border: 1px solid #ccc;
     font-size: 16px;
   }
+
+  .btn{
+    margin: 5px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border: none;
+    background: #007bff;
+    color: white;
+    border-radius: 5px;
+  }
+
+.dropdown {
+  margin: 5px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  border: none;
+  color: white;
+  background-color: #0056b3;
+  border-radius: 5px;
+}
+
+
+  span{
+    margin: 5px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border: none;
+    background: #007bff;
+    color: white;
+    border-radius: 5px;
+  }
   
   .operations button {
     margin: 5px;
@@ -44,7 +106,11 @@ body {
     background: #007bff;
     color: white;
     border-radius: 5px;
-  }
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
   
   .operations button:hover {
     background: #0056b3;
